--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <hr>
     <p>Estou dando início ao meu blog!</p>
     <p>Falarei sobre vários assuntos, espero que goste :)</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Quae laborum voluptatem deleniti ad eum atque adipisci illo recusandae exercitationem, libero praesentium. <br> Accusantium architecto vero harum fugit officia, qui facere tempore!</p>
-    <ol>
-            <li>acordar</li>
-            <li>tomar café</li>
-            <li>trocar a roupa</li>
-            <li>escovar os dentes</li>
-    </ol>
+    <p>Aqui está o meu perfil do GitHub se quiser conferir: <a href="https://github.com/PatrickAMenezes" target="_blank" rel="external">GitHub</a></p>
+    <p><a href="Articles/artigos.html" rel="next" target="_self">Artigos</a>
+    <a href="Arquivos-Baixaveis/arquivos-baixaveis.zip">Links para download</a></p>
+    <ul>
+        <li><a href="Arquivos-Baixaveis/arquivos-baixaveis.zip" download="arquivos-baixaveis.zip" type="application/zip">Arquivo Compactado</a></li>
+    </ul>
 </body>
 </html>
